istio-teaching/gateway-api/v1alpha2/gateway/gw-allowedRoutes-namespaces-same.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: bookinfo
spec:
  addresses:
  - value: 192.168.229.188
    type: IPAddress
  gatewayClassName: istio
  listeners:  
  - protocol: HTTP
    port: 80
    name: bookinfo-gw
    allowedRoutes:
      namespaces:
        from: Same
