istio-teaching/gateway-api/v1alpha2/gateway/gw-listeners-allowedRoutes-namespaces-Selector-matchExpressions.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: bookinfo
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:  
  - protocol: HTTP
    port: 80
    name: bookinfo-gw
    allowedRoutes:
      kinds:
      - group: gateway.networking.k8s.io
        kind: HTTPRoute
      namespaces:
        from: Selector
        selector:
          matchExpressions:
          - key: gateway
            operator: In
            values:
            - bookinfo
