istio-teaching/gateway-api/v1alpha2/gateway/gw-listeners-protocol-TCP.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: echo
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:
  - protocol: TCP
    port: 15443
    name: gw-tcp
    allowedRoutes:
      namespaces:
        from: All
