istio-teaching/gateway-api/v1alpha2/gateway/gw-listeners-tls-mode-Passthrough-tcp.yaml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: echo
spec:
  addresses:
  - value: istio-ingressgateway.istio-system.svc.cluster.local
    type: Hostname
  gatewayClassName: istio
  listeners:  
  - port: 443
    name: gw-bookinfo
    protocol: TLS
    tls:
      mode: Passthrough
    allowedRoutes:
      namespaces:
        from: All
