istio-teaching/gateway-api/v1alpha2/gateway/bookinfo-httproute-system-label.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: HTTPRoute
metadata:
  name: bookinfo
  labels:
    gateway: bookinfo
spec:
  parentRefs:
  - name: bookinfo
    namespace: istio-system
    kind: Gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: productpage
      port: 9080
