istio-teaching/gateway-api/v1alpha2/gateway/echo-tcp-route-parentRefs.yaml
kind: TCPRoute
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: echo
spec:
  parentRefs:
  - name: echo
    namespace: istio-system
    kind: Gateway
    group: gateway.networking.k8s.io
  rules:
  - backendRefs:
    - name: tcp-echo
      port: 9000
